# rusty-cog

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROMPT.md  README.md
.github/workflows/: ci.yml
crates/cog-api/: Cargo.toml
crates/cog-api/src/: daemon.rs  lib.rs  main.rs  monitor.rs  session.rs
crates/cog-core/: Cargo.toml
crates/cog-core/src/: config.rs  destructive.rs  error.rs  indexable.rs  lib.rs
crates/cog-core/src/auth/: credentials.rs  keyring.rs  mod.rs  oauth2.rs  service_account.rs
crates/cog-core/src/http/: client.rs  io.rs  mod.rs  retry.rs
crates/cog-core/src/services/: appscript.rs  calendar.rs  chat.rs  classroom.rs  contacts.rs  docs.rs  drive.rs  forms.rs  gemini.rs  gmail.rs  groups.rs  keep.rs  mod.rs  notebooklm.rs  people.rs  sheets.rs  slides.rs  tasks.rs
crates/cog-core/src/types/: appscript.rs  calendar.rs  chat.rs  classroom.rs  contacts.rs  docs.rs  drive.rs  forms.rs  gemini.rs  gmail.rs  groups.rs  keep.rs  mod.rs  notebooklm.rs  people.rs  sheets.rs  slides.rs  tasks.rs
crates/cog-core/tests/: destructive_gates.rs
crates/cog-ndjson/: Cargo.toml
crates/cog-ndjson/src/: handler.rs  handshake.rs  lib.rs  protocol.rs  request.rs  response.rs  server.rs  wire.rs
crates/cog-ndjson/src/services/: appscript.rs  calendar.rs  chat.rs  classroom.rs  contacts.rs  docs.rs  drive.rs  forms.rs  gemini.rs  gmail.rs  groups.rs  keep.rs  mod.rs  notebooklm.rs  people.rs  sheets.rs  slides.rs  tasks.rs
crates/cog-ndjson/tests/: ndjson_protocol.rs
crates/rusty-cog/: Cargo.toml
crates/rusty-cog/src/: confirm.rs  exit.rs  main.rs  mcp.rs
crates/rusty-cog/src/cli/: appscript.rs  auth.rs  calendar.rs  chat.rs  classroom.rs  config.rs  contacts.rs  docs.rs  drive.rs  forms.rs  gemini.rs  gmail.rs  groups.rs  keep.rs  mod.rs  notebooklm.rs  people.rs  sheets.rs  slides.rs  tasks.rs  time.rs
crates/rusty-cog/src/output/: mod.rs
crates/rusty-cog/tests/: cli_smoke.rs
docs/: COG_PROTOv1.md
fuzz/: Cargo.toml
fuzz/corpus/: handshake_binary.json  handshake_json.json  ping.json  shutdown.json
fuzz/fuzz_targets/: envelope_arbitrary.rs  handshake.rs  ndjson_request.rs  ndjson_response.rs  ndjson_roundtrip.rs  protocol_stream.rs
tests/fixtures/ndjson_samples/: drive_list.json  gmail_search.json
