[workspace]
members = [
    "crates/cog-core",
    "crates/cog-ndjson",
    "crates/cog-api",
    "crates/rusty-cog",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/AmbientELab-Worktrees/rusty-cog"

[workspace.dependencies]
# Async runtime -- NO TOKIO
smol = "2.0"
async-channel = "2.3"
async-lock = "3.4"
async-io = "2.3"
futures-lite = "2.3"

# HTTP -- hyper + smol adapter
hyper = { version = "1.6", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
smol-hyper = "0.1"
http-body-util = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
rustls-pemfile = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
postcard = { version = "1.1", features = ["alloc"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Keyring
keyring = "3.6"

# Unix
libc = "0.2"

# Misc
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"
dirs = "5.0"

# Testing
arbitrary = { version = "1.4", features = ["derive"] }

# Workspace crates
cog-core = { path = "crates/cog-core" }
cog-ndjson = { path = "crates/cog-ndjson" }
cog-api = { path = "crates/cog-api" }

[profile.release]
lto = true
codegen-units = 1
strip = true
