[package]
name = "cog-ndjson"
description = "COG Protocol v1: NDJSON wire format, UDS server, dispatch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
destructive-permanent = ["cog-core/destructive-permanent"]
destructive-bulk-trash = ["cog-core/destructive-bulk-trash"]
gemini-web = ["cog-core/gemini-web"]
notebooklm = ["cog-core/notebooklm"]
experimental = ["gemini-web", "notebooklm"]

[dependencies]
cog-core = { workspace = true }

smol = { workspace = true }
async-channel = { workspace = true }
async-lock = { workspace = true }
async-io = { workspace = true }
futures-lite = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
serde_json = { workspace = true }
